Wyrd ChangeLog
--------------------------------------------------------------------------------

2005-05-04     Released 0.3.0.

               Converted the documentation to LaTeX format, with PDF, HTML,
               and manpage targets.

               Added "new_*_dialog" commands for creating new reminders.  These
               commands will generate a selection dialog for choosing which
               reminder file to add the new reminder to.

2005-05-03     Added a bunch of generic user-defined reminder templates.
               By default, some of these are configured to generate weekly and
               monthly reminders.

               Added a beep and error message when pressing an unbound key.

               Start and end times in the description window had been rendered
               according to the value of schedule_12_hour; now they are
               rendered according to the value of new variable
               description_12_hour .

2005-04-29     Fixed a rare bug that could cause timed reminders to become
               temporarily invisible at month boundaries.

               Optimized rendering of timed reminders window when scrolling
               (should be a little smoother now on slow hardware).

2005-04-26     Released 0.2.0.

2005-04-25     Made colors configurable via the rcfile.

               Made time representation (12/24 hour) configurable via the
               rcfile.

               Implemented external viewing of triggered reminders
               ("rem -q -g") via less(1).

               Added a resize handler.

2005-04-23     Added a configuration variable to switch the first day of the
               week between Sunday and Monday.

               Wyrd now accepts an optional reminders file as a command-line
               parameter.

2005-04-16     Released 0.1.3.

               A more suitable error message is generated when trying to run
               Wyrd on terminals without color support.
