@@ -1,6 +1,9 @@
 Wyrd ChangeLog
 --------------------------------------------------------------------------------
 
+2005-06-20     Corrected the disappearing cursor bug associated with jumping
+               between days with differing numbers of untimed reminders.
+
 2005-05-04     Released 0.3.0.
 
                Converted the documentation to LaTeX format, with PDF, HTML,
